--- a/main.css
+++ b/main.css
@@ -307,7 +307,10 @@ input[type="number"] {
 	background-color: #586b43;
 	border-radius: 10%;
 	margin: 1.5%;
-	background-size: 100% 100%;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center;
 }
 
 .selectWeapon.selected {
